--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Noreply email address
-NOREPLY_HOST=smtp.strato.de
-NOREPLY_PORT=465
-NOREPLY_MAIL_ADDRESS=noreply@fablog.eu
-NOREPLY_MAIL_PW=mxvNfgAWFWps
+NOREPLY_HOST=smtp.example.com
+NOREPLY_PORT=654
+NOREPLY_MAIL_ADDRESS=noreply@example.com
+NOREPLY_MAIL_PW=xxx
 
 # Email address where backups are automatically sent to
-BACKUP_MAIL_ADDRESS=fruin@vivaldi.net
+BACKUP_MAIL_ADDRESS=jd@example.com
